--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "thelitcookbook.github.io",
+  "name": "thelitcookbook",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
