--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
+    "express": "^4.17.1",
     "express-session": "^1.17.3"
   }
 }
+
